--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-svg": "^12.3.0",
     "react-native-upi-payment": "^1.0.3",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
