--- a/package.json
+++ b/package.json
@@ -14,27 +14,30 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@fortawesome/react-native-fontawesome": "^0.2.7",
-    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-navigation/drawer": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
-    "expo-blur": "^11.0.0",
-    "expo-notifications": "^0.14.1",
-    "expo-permissions": "^13.1.1",
+    "expo-blur": "~11.0.0",
+    "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
-    "react-native-maps": "^0.30.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
     "react-native-paper": "^4.11.2",
+    "react-native-reanimated": "~2.3.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.1.2",
-    "react-native-screens": "^3.13.1",
-    "react-native-svg": "^12.3.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-svg": "12.1.1",
     "react-native-upi-payment": "^1.0.3",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
@@ -45,7 +48,7 @@
     "@babel/core": "^7.12.9",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
-    "typescript": "^4.6.2"
+    "typescript": "~4.3.5"
   },
   "private": true
 }
